fixed an error with not correctly aligned player's arrows

--- a/public/pong.css
+++ b/public/pong.css
@@ -13,7 +13,6 @@ body {
 
 #player1_arrow {
   top:340px;
-  left:105px;
   position:absolute;
   font-family: Georgia,Verdana;
   font-size:16px;
@@ -30,7 +29,6 @@ body {
 
 #player2_arrow {
   top:340px;
-  left:990px;
   position:absolute;
   font-family:Georgia,Verdana;
   font-size:16px;
